--- a/examples/example3.ipynb
+++ b/examples/example3.ipynb
@@ -44,7 +44,7 @@
     "        jets = events.Jet\n",
     "\n",
     "        output['cutflow']['all events'] += ak.size(jets, axis=0)\n",
-    "        output['cutflow']['number of jets'] += ak.sum(ak.count(jets, axis=1))\n",
+    "        output['cutflow']['number of jets'] += ak.sum(ak.num(jets))\n",
     "        \n",
     "        # We want jets with an abs(eta) < 1. Conditionals act on every value in an array in Coffea, so this is easy.\n",
     "        eta_max = (np.absolute(jets.eta) < 1)\n",
@@ -54,7 +54,7 @@
     "        # We define good_jets as the actual jets we want to graph. We mask it with the jets that have abs(eta) < 1.\n",
     "        good_jets = jets[eta_max]\n",
     "        # good_jets is no longer a Boolean array, so we can't just sum up the True's. We count the amount of jets and sum that.\n",
-    "        output['cutflow']['final good jets'] += ak.sum(ak.count(good_jets, axis=1))\n",
+    "        output['cutflow']['final good jets'] += ak.sum(ak.num(good_jets, axis=1))\n",
     "        \n",
     "        output['Jet_pt'].fill(dataset=dataset, Jet_pt=ak.flatten(good_jets.pt))\n",
     "        return output\n",
@@ -71,7 +71,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96be6a4dc6c24632833923be5ec2dbf5",
+       "model_id": "11a9722f9e064f37b2801171aaaf4ea6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -85,7 +85,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e49aee628fd04e4e971b00a919c1b894",
+       "model_id": "e7f200392bce47288bdc3a2f9fc292b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,9 +104,9 @@
       "  warnings.warn(str(problem), RuntimeWarning)\n",
       "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Electron_genPartIdx, expected to find collection GenPart but did not\n",
       "  warnings.warn(str(problem), RuntimeWarning)\n",
-      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Tau_genPartIdx, expected to find collection GenPart but did not\n",
-      "  warnings.warn(str(problem), RuntimeWarning)\n",
       "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Photon_genPartIdx, expected to find collection GenPart but did not\n",
+      "  warnings.warn(str(problem), RuntimeWarning)\n",
+      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Tau_genPartIdx, expected to find collection GenPart but did not\n",
       "  warnings.warn(str(problem), RuntimeWarning)\n"
      ]
     }
@@ -168,9 +168,9 @@
      "output_type": "stream",
      "text": [
       "all events 53446198\n",
-      "number of jets 1025717370\n",
+      "number of jets 170952895\n",
       "abs(eta) < 1 39563735\n",
-      "final good jets 237382410\n"
+      "final good jets 39563735\n"
      ]
     }
    ],
