--- a/examples/example5.ipynb
+++ b/examples/example5.ipynb
@@ -44,7 +44,7 @@
     "        MET = events.MET.pt\n",
     "        \n",
     "        output['cutflow']['all events'] += ak.size(muons, axis=0)\n",
-    "        output['cutflow']['all muons'] += ak.sum(ak.count(muons, axis=1))\n",
+    "        output['cutflow']['all muons'] += ak.sum(ak.num(muons, axis=1))\n",
     "        \n",
     "        # Get all combinations of muon pairs in every event.\n",
     "        dimuons = ak.combinations(muons, 2, fields=['i0', 'i1'])\n",
@@ -79,7 +79,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43f70d10992c4d08b40e013cb04ec3bb",
+       "model_id": "4e2e6de4253f4e71acec9b7837733d77",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,7 +93,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8019ec234a746a5bbc8bf0cd9ce8180",
+       "model_id": "9f3d1c64db50447e8a8357b89983fd75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,13 +108,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Electron_genPartIdx, expected to find collection GenPart but did not\n",
+      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Photon_genPartIdx, expected to find collection GenPart but did not\n",
       "  warnings.warn(str(problem), RuntimeWarning)\n",
       "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Muon_genPartIdx, expected to find collection GenPart but did not\n",
       "  warnings.warn(str(problem), RuntimeWarning)\n",
-      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Tau_genPartIdx, expected to find collection GenPart but did not\n",
+      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Electron_genPartIdx, expected to find collection GenPart but did not\n",
       "  warnings.warn(str(problem), RuntimeWarning)\n",
-      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Photon_genPartIdx, expected to find collection GenPart but did not\n",
+      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Tau_genPartIdx, expected to find collection GenPart but did not\n",
       "  warnings.warn(str(problem), RuntimeWarning)\n",
       "/opt/conda/lib/python3.8/site-packages/awkward/_connect/_numpy.py:154: RuntimeWarning: invalid value encountered in sqrt\n",
       "  result = getattr(ufunc, method)(\n"
@@ -178,7 +178,7 @@
      "output_type": "stream",
      "text": [
       "all events 53446198\n",
-      "all muons 1191026768\n",
+      "all muons 74439173\n",
       "final events 2970884\n"
      ]
     }
