--- a/examples/example7.ipynb
+++ b/examples/example7.ipynb
@@ -44,7 +44,7 @@
     "        jets = events.Jet\n",
     "        \n",
     "        output['cutflow']['all events'] += ak.size(jets, axis=0)\n",
-    "        output['cutflow']['all jets'] += ak.sum(ak.count(jets, axis=1))\n",
+    "        output['cutflow']['all jets'] += ak.sum(ak.num(jets, axis=1))\n",
     "        \n",
     "        # Get jets with higher GeV than 30.\n",
     "        min_jetpt = (jets.pt > 30)\n",
@@ -75,7 +75,7 @@
     "        \n",
     "        # We then mask our jets with all three of the above good pairs to get only jets that are 0.4 distance from every type of lepton, and sum them.\n",
     "        sumjets = ak.sum(goodjets[good_jl_pairs].pt, axis=1)\n",
-    "        output['cutflow']['final jets'] += ak.sum(ak.count(goodjets[good_jl_pairs], axis=1))\n",
+    "        output['cutflow']['final jets'] += ak.sum(ak.num(goodjets[good_jl_pairs], axis=1))\n",
     "        output['Jet_pt'].fill(dataset=dataset, Jet_pt=sumjets)\n",
     "        \n",
     "        return output\n",
@@ -92,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29b88e3cdc2444adaf2816b888126007",
+       "model_id": "aef9532fdb034382bf6525460cda2cfd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,7 +106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb616ad618a44a9abbba5b33121c4042",
+       "model_id": "dae14c9801984bc09e042f633cc98107",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,13 +121,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Photon_genPartIdx, expected to find collection GenPart but did not\n",
-      "  warnings.warn(str(problem), RuntimeWarning)\n",
-      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Tau_genPartIdx, expected to find collection GenPart but did not\n",
+      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Electron_genPartIdx, expected to find collection GenPart but did not\n",
       "  warnings.warn(str(problem), RuntimeWarning)\n",
       "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Muon_genPartIdx, expected to find collection GenPart but did not\n",
       "  warnings.warn(str(problem), RuntimeWarning)\n",
-      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Electron_genPartIdx, expected to find collection GenPart but did not\n",
+      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Tau_genPartIdx, expected to find collection GenPart but did not\n",
+      "  warnings.warn(str(problem), RuntimeWarning)\n",
+      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Photon_genPartIdx, expected to find collection GenPart but did not\n",
       "  warnings.warn(str(problem), RuntimeWarning)\n"
      ]
     }
@@ -189,14 +189,14 @@
      "output_type": "stream",
      "text": [
       "all events 53446198\n",
-      "all jets 1025717370\n",
+      "all jets 170952895\n",
       "jets with pt > 30 37461601\n",
       "muons with pt > 10 58440651\n",
       "electrons with pt > 10 5483772\n",
       "jet-muon pairs 27423877\n",
       "jet-electron pairs 4918297\n",
       "jet-lepton pairs 3430495\n",
-      "final jets 20582970\n"
+      "final jets 32545926\n"
      ]
     }
    ],
@@ -222,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
