--- a/analyses/thq/analysis-casa.ipynb
+++ b/analyses/thq/analysis-casa.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -427,7 +427,10 @@
     "            tight_muon_pairs = ak.combinations(tight_muons, 2, fields=['i0', 'i1'])\n",
     "            tight_electron_pairs = ak.combinations(tight_electrons, 2, fields=['i0', 'i1'])\n",
     "\n",
-    "            \n",
+    "            # Helper function which takes a pair, tells you if it is an OSSF with |m_ll - m_z| < 15. Reject these events.\n",
+    "            def ossf_zmass_check(dileptons):\n",
+    "                return ak.any((dileptons.i0.charge != dileptons.i1.charge) & \n",
+    "                        (np.abs(91.18 - (dileptons.i0 + dileptons.i1).mass) < 15.), axis=1)\n",
     "            \n",
     "            # Respectively; we want events with exactly three tight leptons (one triple),\n",
     "            #               one should have pT > 25, discard if OSSF dileptons are close to the Z mass.\n",
@@ -634,74 +637,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68ca37cb4cfc46268a7bb21cb5716a34",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Preprocessing:   0%|          | 0/166 [00:00<?, ?file/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c8870736899430cb5d9828fbea5749d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Processing:   0%|          | 0/1173 [00:00<?, ?chunk/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.8/site-packages/awkward/_connect/_numpy.py:154: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  result = getattr(ufunc, method)(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "{'tHq': 3495799, 'tHW': 1499200, 'ttW': 5280565, 'ttWJets': 6700440, 'ttZ': 13764447, 'ttZJets': 10882500, 'ttH': 10039070, 'WZ': 19993200, 'ZZ': 6669988, 'ZZZ': 249237, 'WWZ': 250000, 'WZZ': 246800, 'tttt': 250000, 'WpWp': 149681, 'WGToLNuG': 6103817, 'ZGTo2LG': 14372682, 'TGJets': 1690472, 'TTGJets': 14748853}\n",
-      "116386751\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'client' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-64664537f383>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mtoc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Dask client:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Total time: %.0f\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtoc\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mtic\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Events / s / thread: {:,.0f}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'entries'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'processtime'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'client' is not defined"
+      "116386751\n",
+      "Dask client: <Client: 'tls://192.168.145.151:8786' processes=2 threads=8, memory=12.59 GB>\n",
+      "Total time: 1130\n",
+      "Events / s / thread: 2,613\n",
+      "Events / s: 103,009\n"
      ]
     }
    ],
    "source": [
+    "from dask.distributed import Client\n",
     "import time\n",
+    "\n",
+    "client = Client(\"tls://matousadamec-40gmail-2ecom.dask.coffea.casa:8786\")\n",
     "\n",
     "tic = time.time()\n",
     "output = processor.run_uproot_job(fileset,\n",
     "                                treename = 'Events',\n",
     "                                processor_instance = SignalProcessor(),\n",
-    "                                executor = processor.futures_executor,\n",
-    "                                executor_args = {'schema': processor.NanoAODSchema, 'savemetrics': True}\n",
+    "                                executor = processor.dask_executor,\n",
+    "                                executor_args = {'schema': processor.NanoAODSchema, 'savemetrics': True, 'client': client}\n",
     "                                )\n",
     "toc = time.time()\n",
     "\n",
@@ -713,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -741,10 +704,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f7e788fb400>"
+       "<matplotlib.legend.Legend at 0x7f4ffc3cf310>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -925,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -938,10 +901,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f7e1c246c70>"
+       "<matplotlib.legend.Legend at 0x7f4fe4471a30>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1122,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1135,10 +1098,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f7e78aad5b0>"
+       "<matplotlib.legend.Legend at 0x7f4ffc62c100>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1319,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1332,10 +1295,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f7e1c554f40>"
+       "<matplotlib.legend.Legend at 0x7f4ffc488c40>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1516,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
