rerunning examples on dask

--- a/examples/example6.ipynb
+++ b/examples/example6.ipynb
@@ -80,61 +80,36 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc0a7cd1ed784070a6eeb8605ff0a649",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Preprocessing:   0%|          | 0/1 [00:00<?, ?file/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "512cee14a4e84fef82519b0d273372b7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Processing:   0%|          | 0/214 [00:00<?, ?chunk/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Electron_genPartIdx, expected to find collection GenPart but did not\n",
-      "  warnings.warn(str(problem), RuntimeWarning)\n",
-      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Photon_genPartIdx, expected to find collection GenPart but did not\n",
-      "  warnings.warn(str(problem), RuntimeWarning)\n",
-      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Tau_genPartIdx, expected to find collection GenPart but did not\n",
-      "  warnings.warn(str(problem), RuntimeWarning)\n",
-      "/opt/conda/lib/python3.8/site-packages/coffea/nanoevents/schemas/nanoaod.py:133: RuntimeWarning: Parsing indexer Muon_genPartIdx, expected to find collection GenPart but did not\n",
-      "  warnings.warn(str(problem), RuntimeWarning)\n"
+      "[########################################] | 100% Completed |  3min 30.2s\r"
      ]
     }
    ],
    "source": [
-    "fileset = {'SingleMu' : [\"root://eospublic.cern.ch//eos/root-eos/benchmark/Run2012B_SingleMu.root\"]}\n",
+    "from dask.distributed import Client\n",
+    "import time\n",
+    "\n",
+    "client = Client(\"tls://localhost:8786\")\n",
     "\n",
     "# Our file is missing some cross-references, so we have to make NanoAOD push warnings instead of erroring out.\n",
     "# This ultimately isn't a problem, it's just a constraint of the public NanoAOD we're using.\n",
+    "def fix():\n",
+    "    from coffea.nanoevents import NanoAODSchema\n",
+    "    NanoAODSchema.warn_missing_crossrefs = True\n",
+    "\n",
+    "client.register_worker_callbacks(fix)\n",
     "processor.NanoAODSchema.warn_missing_crossrefs = True\n",
     "\n",
-    "output = processor.run_uproot_job(fileset=fileset, \n",
-    "                       treename=\"Events\", \n",
-    "                       processor_instance=Processor(),\n",
-    "                       executor=processor.futures_executor,\n",
-    "                       executor_args={'schema': processor.NanoAODSchema},\n",
-    "                       chunksize=250000)"
+    "fileset = {'SingleMu' : [\"root://eospublic.cern.ch//eos/root-eos/benchmark/Run2012B_SingleMu.root\"]}\n",
+    "\n",
+    "output = processor.run_uproot_job(fileset,\n",
+    "                                treename = 'Events',\n",
+    "                                processor_instance = Processor(),\n",
+    "                                executor = processor.dask_executor,\n",
+    "                                executor_args = {'schema': processor.NanoAODSchema, 'client': client}\n",
+    "                                )"
    ]
   },
   {
@@ -218,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
