--- a/coffea-casa-template.ipynb
+++ b/coffea-casa-template.ipynb
@@ -15,7 +15,6 @@
     "    - [Scheduler Setup](#Scheduler-Setup)\n",
     "    - [Running the Analysis](#Running-the-Analysis)\n",
     "- [Miscellaneous](#Miscellaneous)\n",
-    "    - [JaggedCandidateArrays vs. NanoEvents](#JaggedCandidateArrays-vs.-NanoEvents)\n",
     "    - [ServiceX](#ServiceX)"
    ]
   },
@@ -29,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +190,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from dask.distributed import Client\n",
+    "\n",
+    "client = Client(\"tls://matousadamec-40gmail-2ecom.dask.coffea.casa:8786\")\n",
+    "client"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,22 +211,34 @@
     "\n",
     "`executor`: The executor that we wish to use; coffea-casa is intended to be used with the Dask executor. You can also try `futures_executor` and `iterative_executor`, and both can be useful for debugging or troubleshooting when workers are acting up with errors.\n",
     "\n",
-    "`executor_args`: There's a lot of optional arguments you can put in the dictionary here. See the run_uproot_job [documentation](https://coffeateam.github.io/coffea/api/coffea.processor.run_uproot_job.html). At minimum, we need to point to a Dask scheduler (`'client': client`) if we're using the Dask executor; we do not need to do this for the futures or iterative executor. If you're using NanoEvents, then you need to say so (`'nano': True`). For JaggedCandidateArrays, you shouldn't need to specify anything, until NanoEvents becomes the default.\n",
+    "`executor_args`: There's a lot of optional arguments you can put in the dictionary here. See the run_uproot_job [documentation](https://coffeateam.github.io/coffea/api/coffea.processor.run_uproot_job.html). At minimum, we need to point to a Dask scheduler (`'client': client`) if we're using the Dask executor; we do not need to do this for the futures or iterative executor. If you're using NanoEvents, then you need to say so (`'schema': processor.NanoAODSchema`).\n",
     "\n",
     "`chunksize`: Coffea will split your data into chunks with this many events. If your data has a million events and your chunksize is 250000, you'll have four chunks. There is also a `maxchunks` argument you can put in, which will stop the analysis after a certain number of chunks are reached. In other words, `maxchunks=2` will only process 500000 events of your million. This can be useful for debugging."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'client' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-5a0fad7ce8c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m                        \u001b[0mprocessor_instance\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mProcessor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                        \u001b[0mexecutor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprocessor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdask_executor\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m                        \u001b[0mexecutor_args\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'client'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mclient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'nano'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m                        chunksize=250000)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'client' is not defined"
+     ]
+    }
+   ],
    "source": [
     "output = processor.run_uproot_job(fileset=fileset, \n",
     "                       treename=\"Events\", \n",
     "                       processor_instance=Processor(),\n",
     "                       executor=processor.dask_executor,\n",
-    "                       executor_args={'client': client, 'nano': True},\n",
+    "                       executor_args={'client': client, 'schema': processor.NanoAODSchema},\n",
     "                       chunksize=250000)"
    ]
   },
@@ -231,28 +247,6 @@
    "metadata": {},
    "source": [
     "## Miscellaneous\n",
-    "\n",
-    "\n",
-    "### JaggedCandidateArrays vs. NanoEvents\n",
-    "JaggedCandidateArrays employ explicit instantiation of data. For example, to get muons with a JaggedCandidateArray:\n",
-    "\n",
-    "` def process(self, df):\n",
-    "        dataset = df['dataset']\n",
-    "        muons = JaggedCandidateArray.candidatesfromcounts(\n",
-    "            df['nMuon'],\n",
-    "            pt=df['Muon_pt'].content,\n",
-    "            eta=df['Muon_eta'].content,\n",
-    "            phi=df['Muon_phi'].content,\n",
-    "            mass=df['Muon_mass'].content,\n",
-    "            charge=df['Muon_charge'].content) `\n",
-    "            \n",
-    "Conversely, NanoEvents employs lazy-reading and doesn't require explicit instantiation of data. This makes it both more efficient and more elegant. To get muons with a NanoEvents array:\n",
-    "\n",
-    "` def process(self, events):\n",
-    "        dataset = events.metadata['dataset']\n",
-    "        muons = events.Muons `\n",
-    "        \n",
-    "If we also wanted to get electrons, then we'd have to construct another JaggedCandidateArray with a similar block of code. With NanoEvents, we'd just call `electrons = events.Electrons.` Thus, it's recommended that you make the swap to NanoEvents if you're still using JaggedCandidateArrays!\n",
     "\n",
     "### ServiceX\n",
     "[ServiceX](https://servicex.readthedocs.io/en/latest/introduction/) is a data delivery package which uses [func_adl](https://pypi.org/project/func-adl/) to fetch data. \n",
@@ -284,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
