adding dask reporting

--- a/analyses/thq/analysis-casa-xgboost.ipynb
+++ b/analyses/thq/analysis-casa-xgboost.ipynb
@@ -540,13 +540,25 @@
     "\n",
     "client = Client(\"tls://localhost:8786\")\n",
     "\n",
+    "# This function ensures that we aren't overwriting Dask report filenames.\n",
+    "def unique(filename):\n",
+    "    file, ext = os.path.splitext(filename)\n",
+    "    counter = 0\n",
+    "    while os.path.exists(filename):\n",
+    "        counter += 1\n",
+    "        filename = file + str(counter) + ext\n",
+    "    return filename\n",
+    "\n",
     "tic = time.time()\n",
-    "output = processor.run_uproot_job(fileset=fileset, \n",
-    "                       treename=\"Events\", \n",
-    "                       processor_instance=SignalProcessor(),\n",
-    "                       executor=processor.dask_executor,\n",
-    "                       executor_args={'client': client, 'schema': processor.NanoAODSchema, 'savemetrics': 1},\n",
-    "                       chunksize=250000)\n",
+    "from dask.distributed import performance_report\n",
+    "fname = unique(\"dask-report-\" + \"AUTO\" + str(int(len(fileset)/18)) + \"F\" + \".html\")\n",
+    "with performance_report(filename=fname):\n",
+    "    output = processor.run_uproot_job(fileset=fileset, \n",
+    "                            treename=\"Events\", \n",
+    "                            processor_instance=SignalProcessor(),\n",
+    "                            executor=processor.dask_executor,\n",
+    "                            executor_args={'client': client, 'schema': processor.NanoAODSchema, 'savemetrics': 1},\n",
+    "                            chunksize=250000)\n",
     "toc = time.time()"
    ]
   },
@@ -559,10 +571,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dask client: <Client: 'tls://192.168.144.145:8786' processes=2 threads=8, memory=11.72 GiB>\n",
-      "Total time: 302\n",
-      "Events / s / thread: 7,748\n",
-      "Events / s: 262,946\n"
+      "Dask client: <Client: 'tls://192.168.106.44:8786' processes=2 threads=8, memory=11.72 GiB>\n",
+      "Total time: 487\n",
+      "Events / s / thread: 5,572\n",
+      "Events / s: 163,025\n"
      ]
     }
    ],
@@ -1252,10 +1264,10 @@
     {
      "data": {
       "text/plain": [
-       "(array([ 0.1593782 , -0.01094237,  0.3462674 , ...,  0.01712358,\n",
-       "         0.04915088,  0.02122907], dtype=float32),\n",
-       " array([-0.03153034,  0.02329806,  0.02021468, ...,  0.00662548,\n",
-       "         0.04153866,  0.01574154], dtype=float32))"
+       "(array([ 0.05134328,  0.00606659, -0.00736674, ..., -0.0007574 ,\n",
+       "         0.01118288,  0.06759765], dtype=float32),\n",
+       " array([-0.00169579,  0.00033693,  0.04573681, ...,  0.1689723 ,\n",
+       "         0.0127239 ,  0.02752751], dtype=float32))"
       ]
      },
      "execution_count": 13,
@@ -1292,39 +1304,29 @@
        "        'll_detaFwdJetBJet', 'll_detaFwdJetClosestLep',\n",
        "        'll_dphiHighestPtSSPair', 'll_minDRll', 'll_Lep2Pt', 'll_dataset'],\n",
        "       dtype='object'),\n",
-       " {'f0': 6.2784366466177595,\n",
-       "  'f1': 2.5063964145442363,\n",
-       "  'f4': 1.0010909334868052,\n",
-       "  'f5': 1.0238826643005403,\n",
-       "  'f3': 1.5476471444979996,\n",
-       "  'f6': 0.8531182763784878,\n",
-       "  'f8': 0.530947987435206,\n",
-       "  'f7': 0.49110559002595616,\n",
-       "  'f2': 0.7783321468513514},\n",
-       " {'f0': 0.6655166637228807,\n",
-       "  'f1': 0.3922605745903074,\n",
-       "  'f5': 0.30089421283866513,\n",
-       "  'f7': 0.43234317053481375,\n",
-       "  'f8': 0.23286346766899713,\n",
-       "  'f4': 0.22652217431466629,\n",
-       "  'f6': 0.20722982539487084,\n",
-       "  'f3': 0.23993207668440672,\n",
-       "  'f2': 0.17106650233439996})"
+       " {'f0': 6.001399798977673,\n",
+       "  'f1': 2.555627226171786,\n",
+       "  'f5': 1.0790162596957005,\n",
+       "  'f4': 0.9773780130697605,\n",
+       "  'f3': 1.7896398078359343,\n",
+       "  'f6': 0.773375674250184,\n",
+       "  'f8': 0.5511325883908741,\n",
+       "  'f7': 0.4484273037978778,\n",
+       "  'f2': 0.7601907068837837},\n",
+       " {'f0': 0.6626975238801667,\n",
+       "  'f1': 0.3880716207088575,\n",
+       "  'f5': 0.31698023875192427,\n",
+       "  'f7': 0.379568751480709,\n",
+       "  'f3': 0.27770778143189884,\n",
+       "  'f4': 0.21657869942807603,\n",
+       "  'f8': 0.26710883970258215,\n",
+       "  'f6': 0.22385289932708927,\n",
+       "  'f2': 0.19910159324709675})"
       ]
      },
      "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.client - ERROR - Failed to reconnect to scheduler after 10.00 seconds, closing client\n",
-      "_GatheringFuture exception was never retrieved\n",
-      "future: <_GatheringFuture finished exception=CancelledError()>\n",
-      "asyncio.exceptions.CancelledError\n"
-     ]
     }
    ],
    "source": [
