--- a/analyses/thq/analysis-casa.ipynb
+++ b/analyses/thq/analysis-casa.ipynb
@@ -646,10 +646,10 @@
      "text": [
       "{'tHq': 3495799, 'tHW': 1499200, 'ttW': 5280565, 'ttWJets': 6700440, 'ttZ': 13764447, 'ttZJets': 10882500, 'ttH': 10039070, 'WZ': 19993200, 'ZZ': 6669988, 'ZZZ': 249237, 'WWZ': 250000, 'WZZ': 246800, 'tttt': 250000, 'WpWp': 149681, 'WGToLNuG': 6103817, 'ZGTo2LG': 14372682, 'TGJets': 1690472, 'TTGJets': 14748853}\n",
       "116386751\n",
-      "Dask client: <Client: 'tls://192.168.144.145:8786' processes=10 threads=40, memory=57.50 GiB>\n",
-      "Total time: 493\n",
-      "Events / s / thread: 4,721\n",
-      "Events / s: 236,275\n"
+      "Dask client: <Client: 'tls://192.168.106.44:8786' processes=3 threads=12, memory=17.44 GiB>\n",
+      "Total time: 530\n",
+      "Events / s / thread: 3,775\n",
+      "Events / s: 219,754\n"
      ]
     }
    ],
@@ -659,13 +659,25 @@
     "\n",
     "client = Client(\"tls://localhost:8786\")\n",
     "\n",
+    "# This function ensures that we aren't overwriting Dask report filenames.\n",
+    "def unique(filename):\n",
+    "    file, ext = os.path.splitext(filename)\n",
+    "    counter = 0\n",
+    "    while os.path.exists(filename):\n",
+    "        counter += 1\n",
+    "        filename = file + str(counter) + ext\n",
+    "    return filename\n",
+    "\n",
     "tic = time.time()\n",
-    "output = processor.run_uproot_job(fileset,\n",
-    "                                treename = 'Events',\n",
-    "                                processor_instance = SignalProcessor(),\n",
-    "                                executor = processor.dask_executor,\n",
-    "                                executor_args = {'schema': processor.NanoAODSchema, 'savemetrics': True, 'client': client}\n",
-    "                                )\n",
+    "from dask.distributed import performance_report\n",
+    "fname = unique(\"dask-report-\" + \"AUTO\" + str(int(len(fileset)/18)) + \"F\" + \".html\")\n",
+    "with performance_report(filename=fname):\n",
+    "    output = processor.run_uproot_job(fileset,\n",
+    "                                    treename = 'Events',\n",
+    "                                    processor_instance = SignalProcessor(),\n",
+    "                                    executor = processor.dask_executor,\n",
+    "                                    executor_args = {'schema': processor.NanoAODSchema, 'savemetrics': True, 'client': client}\n",
+    "                                    )\n",
     "toc = time.time()\n",
     "\n",
     "print(\"Dask client:\", client)\n",
@@ -704,7 +716,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f316c2ff3a0>"
+       "<matplotlib.legend.Legend at 0x7fb16cd65d60>"
       ]
      },
      "execution_count": 6,
@@ -901,7 +913,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f30d5ab9ac0>"
+       "<matplotlib.legend.Legend at 0x7fb1645bbc40>"
       ]
      },
      "execution_count": 7,
@@ -1098,7 +1110,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f3181000af0>"
+       "<matplotlib.legend.Legend at 0x7fb16cf53f70>"
       ]
      },
      "execution_count": 8,
@@ -1295,7 +1307,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f318059c9d0>"
+       "<matplotlib.legend.Legend at 0x7fb16cf36190>"
       ]
      },
      "execution_count": 9,
@@ -1487,16 +1499,6 @@
      "output_type": "stream",
      "text": [
       "all events 116386751\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.client - ERROR - Failed to reconnect to scheduler after 10.00 seconds, closing client\n",
-      "_GatheringFuture exception was never retrieved\n",
-      "future: <_GatheringFuture finished exception=CancelledError()>\n",
-      "asyncio.exceptions.CancelledError\n"
      ]
     }
    ],
