added titles to each notebook for docs

--- a/analyses/thq/analysis_tutorial.ipynb
+++ b/analyses/thq/analysis_tutorial.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1><i>Columnar Analysis at Scale with Coffea</i></u></h1>\n",
+    "# Coffea-Casa tHq Analysis Tutorial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h2>Authors</h2>\n",
     "<b>Notebook by:</b> Mat Adamec (<i>UNL</i>)\n",
     "<br/>\n",
@@ -819,9 +825,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "coffea",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "coffea"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -833,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
