--- a/coffea-casa-template.ipynb
+++ b/coffea-casa-template.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Coffea Casa Analysis Template"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Table of Contents\n",
     "- [Introduction](#Introduction)\n",
     "- [Loading Files](#Loading-Files)\n",
@@ -269,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
